made tiny countries more visible - fixed some layout key things

--- a/css/index.styl
+++ b/css/index.styl
@@ -7,5 +7,11 @@
 
 .keytext
   font-size: 8pt
+
 .keyxaxistext
-  font-size: 6pt
+  font-size: 7pt
+  fill: #aaa
+
+.keytext-invisible
+  font-size: 2pt
+  fill: #fff
